moved some files and did some more cleanup